# remote-system-monitor-rust-server

./: CLAUDE.md  Cargo.toml  README.md  android-app-instructions.md  errors.md  instruction.md  shell.nix
docs/plans/: 2026-03-10-websocket-windows-gpu.md
src/: main.rs
