[package]
name = "system-monitor-server"
version = "1.0.0"
edition = "2021"
description = "Remote System Monitor - lightweight Rust server"

[[bin]]
name = "monitor"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json", "ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System metrics
sysinfo = "0.30"
nvml-wrapper = "0.10"

# WebSocket streams
futures-util = "0.3"

# Misc
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
